# lucidkaraoke

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist  README.md  ai-driven-product.md  lucidkaraoke.jucer  rvc_simple_inference.py  setup_demucs_env.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: DockerManager.cpp  DockerManager.h  HttpStemProcessor.cpp  HttpStemProcessor.h  RVCProcessor.cpp  RVCProcessor.h  StemProcessor.cpp  StemProcessor.h  VocalMixer.cpp  VocalMixer.h
Source/Components/: LoadButton.cpp  LoadButton.h  ProgressBar.cpp  ProgressBar.h  RecordButton.cpp  RecordButton.h  SourceToggleButton.cpp  SourceToggleButton.h  SplitButton.cpp  SplitButton.h  TransportControls.cpp  TransportControls.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Config/: config.h  config.h.sample
Source/LookAndFeel/: DarkTheme.cpp  DarkTheme.h
docker/: Dockerfile  README.md  docker-compose.yml  requirements.txt  test_service.sh
docker/app/: main.py
